# mcp-wegene-assistant

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
config/: reports.json
src/wegene_assistant/: flask_server.py  models.py  server.py
src/wegene_assistant/tools/: oauth_tool.py  profile_tool.py  report_tool.py
